# HogwartsMP

./: .gitignore  .gitmodules  CLIENT_RESTRUCTURING.md  CMakeLists.txt  FRAMEWORK_V2_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  PHASE1_COMPLETE.md  PROJECT_OVERVIEW_OLD.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_GUIDE.md  build.cmd  cleanup_client.bat  package_release.bat  start.cmd
.claude/: settings.local.json
code/: CMakeLists.txt
code/client/: CMakeLists.txt
code/client/src/: main.cpp
code/client/src/Overlay/: i_widget.h  overlay_manager.cpp  overlay_manager.h
code/client/src/Overlay/Widgets/: chat_widget.cpp  chat_widget.h  stats_widget.cpp  stats_widget.h
code/client/src/Services/: network_client.cpp  network_client.h
code/client/src/UI/: chat.cpp  teleport_manager.cpp  ui_base.cpp
code/client/src/core/: application.cpp  application.h  client_instance.cpp  client_instance.h  client_main.cpp
code/client/src/core/hooks/: dx12_pointer_grab.cpp  render_device.cpp
code/client/src/core/modules/: human.h
code/client/src/core/states/: session_connected.cpp
code/client/src/networking/: network_client.cpp  network_client.h
code/client/src/sdk/Runtime/Core/Private/Android/: AndroidHeapProfiling.cpp  AndroidHeapProfiling.h  AndroidPlatformBacktrace.cpp  AndroidPlatformMemory.cpp  AndroidPlatformMisc.cpp  AndroidPlatformPGO.cpp  AndroidPlatformStackWalk.cpp  AndroidPlatformString.cpp  AndroidSignals.h
code/client/src/sdk/Runtime/Core/Private/Containers/: BackgroundableTicker.cpp  Ticker.cpp
code/client/src/sdk/Runtime/Core/Private/GenericPlatform/: GenericPlatformStricmp.cpp
code/client/src/sdk/Runtime/Core/Private/HAL/: DiskUtilizationTracker.cpp  ExceptionHandling.cpp  IPlatformFileManagedStorageWrapper.cpp  LowLevelMemTrackerTest.cpp  Thread.cpp  ThreadHeartBeat.cpp
code/client/src/sdk/Runtime/Core/Private/HoloLens/: HoloLensOutputDevices.cpp  HoloLensOutputDevicesPrivate.h  HoloLensPlatformAtomics.cpp
code/client/src/sdk/Runtime/Core/Private/IO/: IoDirectoryIndex.cpp  IoStore.cpp
code/client/src/sdk/Runtime/Core/Private/Internationalization/: GatherableTextData.cpp  TextCache.cpp
code/client/src/sdk/Runtime/Core/Private/Logging/: LogVerbosity.cpp
code/client/src/sdk/Runtime/Core/Private/Lumin/: LuminPlatformProcess.cpp
code/client/src/sdk/Runtime/Core/Private/Misc/: App.cpp  FrameRate.cpp  MemStack.cpp
code/client/src/sdk/Runtime/Core/Private/ProfilingDebugging/: CountersTrace.cpp
code/client/src/sdk/Runtime/Core/Private/Stats/: StatsMisc.cpp  StatsTrace.cpp
code/client/src/sdk/Runtime/Core/Private/Windows/: WindowsPlatformProcess.cpp
code/client/src/sdk/Runtime/Core/Public/: CoreMinimal.h
code/client/src/sdk/Runtime/Core/Public/Algo/: HeapSort.h  Heapify.h  IsHeap.h  Partition.h
code/client/src/sdk/Runtime/Core/Public/Android/: AndroidJavaMessageBox.h  AndroidPlatformCompilerSetup.h  AndroidPlatformCrashContext.h  AndroidSystemIncludes.h
code/client/src/sdk/Runtime/Core/Public/Containers/: BackgroundableTicker.h  DiscardableKeyValueCache.h
code/client/src/sdk/Runtime/Core/Public/Delegates/: IntegerSequence.h
code/client/src/sdk/Runtime/Core/Public/FramePro/: FrameProProfiler.h
code/client/src/sdk/Runtime/Core/Public/GenericPlatform/: GenericPlatformChunkInstall.h  OSAllocationPool.h
code/client/src/sdk/Runtime/Core/Public/HAL/: DiskUtilizationTracker.h  ExceptionHandling.h  IPlatformFileManagedStorageWrapper.h  MallocBinnedCommon.h  MallocTBB.h  PageCache.h  ThreadSingleton.h  VirtualAllocator.h
code/client/src/sdk/Runtime/Core/Public/Hash/: CityHash.h
code/client/src/sdk/Runtime/Core/Public/HoloLens/: HoloLensPlatform.h  HoloLensPlatformCrashContext.h  PreHoloLensApi.h
code/client/src/sdk/Runtime/Core/Public/Linux/: LinuxPlatformCrashContext.h
code/client/src/sdk/Runtime/Core/Public/Logging/: LogVerbosity.h
code/client/src/sdk/Runtime/Core/Public/Math/: GenericOctreePublic.h  Int128.h  PackedVector.h  Sobol.h  Sphere.h  StatisticalFloat.h  UnrealPlatformMathSSE.h  Vector4.h
code/client/src/sdk/Runtime/Core/Public/Misc/: Base64.h  EnumClassFlags.h  FallbackStruct.h  FieldAccessor.h  FrameNumber.h  FrameRate.h  FrameValue.h  IEngineCrypto.h  MemStack.h  MonolithicHeaderBoilerplate.h  OutputDeviceFile.h  TVariant.h
code/client/src/sdk/Runtime/Core/Public/ProfilingDebugging/: CountersTrace.h  CsvProfiler.h  ExternalProfiler.h  FormatArgsTrace.h  PlatformFileTrace.h
code/client/src/sdk/Runtime/Core/Public/Serialization/: BitArchive.h
code/client/src/sdk/Runtime/Core/Public/Stats/: StatsHierarchical.h
code/client/src/sdk/Runtime/Core/Public/Templates/: MaxSizeof.h  Sorting.h
code/client/src/sdk/Runtime/Core/Public/UObject/: NameBatchSerialization.h  WeakObjectPtrTemplates.h
code/client/src/sdk/Runtime/Core/Public/Windows/: WindowsHWrapper.h
code/client/src/sdk/Runtime/CoreUObject/Private/AssetRegistry/: AssetDataTagMap.cpp
code/client/src/sdk/Runtime/CoreUObject/Private/Misc/: TextBuffer.cpp  WorldCompositionUtility.cpp
code/client/src/sdk/Runtime/CoreUObject/Private/Serialization/: ArchiveStackTrace.cpp  ArchiveUObjectFromStructuredArchive.cpp  DuplicateDataReader.cpp  DuplicateDataWriter.cpp  TraceReferences.cpp  UnversionedPropertySerialization.h  UnversionedPropertySerializationTest.cpp  UnversionedPropertySerializationTest.h
code/launcher/: CMakeLists.txt
code/launcher/src/: Logger.cpp  Logger.h  main.cpp  manual_map.cpp  manual_map.h
code/server/: CMakeLists.txt
code/server/src/: main.cpp
code/server/src/core/: cli.cpp  cli.h  server.cpp  server.h  server_instance.cpp  server_instance.h
code/server/src/core/modules/: human.h
code/server/src/game/modules/: human.cpp
code/server/src/logging/: network_logger.cpp  network_logger.h
code/server/src/networking/: network_server.cpp  network_server.h
code/shared/: version.cpp
code/shared/logging/: logger.cpp  logger.h
code/shared/networking/: network_packet.cpp  network_packet.h
code/shared/utils/: safe_win32.h
code/shared/utils/hooking/: hook_function.h  hooking.h
code/shared/utils/states/: machine.h  state.h
(+59 files in other folders)
